--- a/1.VMware中的三种网络模式.md
+++ b/1.VMware中的三种网络模式.md
@@ -8,7 +8,7 @@ VMware中的三种网络模式
 
 先从最简单的开始讲。桥接模式，故名思意就是搭建一个虚拟网桥将网卡与网卡之间的流量通信给联通起来，实现两张网卡之间的通信（熟悉KVM技术的同学应该不会感到陌生），举个简单的例子：
 
-![image-20240505115111035](C:\Users\Hu\AppData\Roaming\Typora\typora-user-images\image-20240505115111035.png)
+[![image-1.1](https://github.com/Xiao254182/blog/blob/master/img/1/1.1.png)]
 
 如图，PC1和PC2通过交换机进行连接，经过简单配置后便实现了联通，同理，桥接模式就是创建一个虚拟的交换机来将你的一张通信网卡和你在VMware中创建的虚拟机的网卡给绑定在一起
 
