--- a/1.VMware中的三种网络模式.md
+++ b/1.VMware中的三种网络模式.md
@@ -12,19 +12,19 @@ VMware中的三种网络模式
 
 如图，PC1和PC2通过交换机进行连接，经过简单配置后便实现了联通，同理，桥接模式就是创建一个虚拟的交换机来将你的一张通信网卡和你在VMware中创建的虚拟机的网卡给绑定在一起
 
-![image-20240505120542659](C:\Users\Hu\AppData\Roaming\Typora\typora-user-images\image-20240505120542659.png)
+[![image-1.2](https://github.com/Xiao254182/blog/blob/master/img/1/1.2.png)]
 
 实现虚拟机内部网卡到物理机网卡到外部网络的通信。注意，因为虚拟交换机无需做过多的配置，只需作为网桥设备进行连接，因此与绑定的IP地址网卡的网段是一样的。例如：
 
-![image-20240505120914333](C:\Users\Hu\AppData\Roaming\Typora\typora-user-images\image-20240505120914333.png)
+[![image-1.3](https://github.com/Xiao254182/blog/blob/master/img/1/1.3.png)]
 
-![image-20240505121327565](C:\Users\Hu\AppData\Roaming\Typora\typora-user-images\image-20240505121327565.png)
+[![image-1.4](https://github.com/Xiao254182/blog/blob/master/img/1/1.4.png)]
 
-![image-20240505121259832](C:\Users\Hu\AppData\Roaming\Typora\typora-user-images\image-20240505121259832.png)
+[![image-1.5](https://github.com/Xiao254182/blog/blob/master/img/1/1.5.png)]
 
 此时我们在虚拟机中ping www.baidu.com，然后在物理机中使用Wireshark在Wi-Fi网卡上抓包，发现在该网卡中存在一个 ICMP 的回显（ping）请求，发送者的 IP 地址是 192.168.47.104，目标 IP 地址是 110.242.68.3。一开始没有找到对应的响应，然后，第二个请求与第一个请求相同，但是在第二个请求中，有一条回复（reply），表明有一个响应在 11 秒后。最后，第三个消息是一个 ICMP 回复，响应了第二个请求，证明请求成功，实现了虚拟机的外部通信。
 
-![image-20240505123107647](C:\Users\Hu\AppData\Roaming\Typora\typora-user-images\image-20240505123107647.png)
+[![image-1.6](https://github.com/Xiao254182/blog/blob/master/img/1/1.6.png)]
 
 2.NAT模式：
 
@@ -34,17 +34,17 @@ NAT(Network Address Translation)意为网络地址转换，NAT模式意为网络
 
 因此首先在该网卡上配置IP地址，子网掩码，如图：
 
-![image-20240505144551815](C:\Users\Hu\AppData\Roaming\Typora\typora-user-images\image-20240505144551815.png)
+[![image-2.1](https://github.com/Xiao254182/blog/blob/master/img/1/2.1.png)]
 
 然后将主机网卡与虚拟NAT设备直接连接，并配置NAT设备的参数（参数意义不做解释）
 
-![image-20240505144719612](C:\Users\Hu\AppData\Roaming\Typora\typora-user-images\image-20240505144719612.png)
+[![image-2.2](https://github.com/Xiao254182/blog/blob/master/img/1/2.2.png)]
 
 此时禁用VMnet8网卡后打开虚拟机，测试网络连接成功，但远程终端连接失败
 
-![image-20240505155044681](C:\Users\Hu\AppData\Roaming\Typora\typora-user-images\image-20240505155044681.png)
+[![image-2.3](https://github.com/Xiao254182/blog/blob/master/img/1/2.3.png)]
 
-![image-20240505161202091](C:\Users\Hu\AppData\Roaming\Typora\typora-user-images\image-20240505161202091.png)
+[![image-2.4](https://github.com/Xiao254182/blog/blob/master/img/1/2.4.png)]
 
 此时打开VMnet8网卡，再次测试远程终端，连接成功，证明虚拟机使用虚拟NAT设备来让虚拟机联网，而VMnet8是用来主机与虚拟机通信的，与虚拟机连接外网无关。
 
@@ -54,26 +54,28 @@ NAT(Network Address Translation)意为网络地址转换，NAT模式意为网络
 
 因此首先在该网卡上配置IP地址，子网掩码，如图：
 
-![image-20240505160057576](C:\Users\Hu\AppData\Roaming\Typora\typora-user-images\image-20240505160057576.png)
+[![image-3.1](https://github.com/Xiao254182/blog/blob/master/img/1/3.1.png)]
 
 配置参数（参数意义不做解释）
 
-![image-20240505160210413](C:\Users\Hu\AppData\Roaming\Typora\typora-user-images\image-20240505160210413.png)
+[![image-3.2](https://github.com/Xiao254182/blog/blob/master/img/1/3.2.png)]
 
 测试打开虚拟机发现网络联通失败，但可以连接远程终端，
 
-![image-20240505160920371](C:\Users\Hu\AppData\Roaming\Typora\typora-user-images\image-20240505160920371.png)
+[![image-3.3](https://github.com/Xiao254182/blog/blob/master/img/1/3.3.png)]
 
-![image-20240505160936683](C:\Users\Hu\AppData\Roaming\Typora\typora-user-images\image-20240505160936683.png)
+[![image-3.4](https://github.com/Xiao254182/blog/blob/master/img/1/3.4.png)]
 
-证明仅主机模式下虚拟机只与主机相互通讯。如果想在仅主机模式下也可以联通网络，则需要把主机的网卡共享给VMnet1网卡。例如：![image-20240505160756186](C:\Users\Hu\AppData\Roaming\Typora\typora-user-images\image-20240505160756186.png)
+证明仅主机模式下虚拟机只与主机相互通讯。如果想在仅主机模式下也可以联通网络，则需要把主机的网卡共享给VMnet1网卡。例如：
+
+[![image-3.5](https://github.com/Xiao254182/blog/blob/master/img/1/3.5.png)]
 
 然后将VMnet1的配置做出修改
 
-![image-20240505161331941](C:\Users\Hu\AppData\Roaming\Typora\typora-user-images\image-20240505161331941.png)
+[![image-3.6](https://github.com/Xiao254182/blog/blob/master/img/1/3.6.png)]
 
 测试结果证明可以使得虚拟机连接外网
 
-![image-20240505162134585](C:\Users\Hu\AppData\Roaming\Typora\typora-user-images\image-20240505162134585.png)
+[![image-3.7](https://github.com/Xiao254182/blog/blob/master/img/1/3.7.png)]
 
 步骤基本和NAT一样，设置固定IP时虚拟机IP要和VMnet1在同一网段，网关一致，DNS地址要和主机相同。
