--- a/1.VMware中的三种网络模式.md
+++ b/1.VMware中的三种网络模式.md
@@ -1,4 +1,4 @@
-                                                                       VMware中的三种网络模式
+<h>VMware中的三种网络模式</h>
 
 在VMware中有三种网络模式，分别为仅主机模式，桥接模式和NAT模式，下面就分别介绍三种网络模式的
 
