--- a/2.企业部署K8S.md
+++ b/2.企业部署K8S.md
@@ -12,7 +12,7 @@
 
 k8s架构图
 
-<img src="C:\Users\Hu\Desktop\2\k8s架构图.jpg" alt="k8s架构图" style="zoom: 50%;" />
+<img src="https://github.com/Xiao254182/notes/blob/master/img/2/k8s架构图.jpg" alt="k8s架构图" style="zoom: 50%;" />
 
 软件包：
 
@@ -90,7 +90,7 @@ bind-9.11.4-26.P2.el7_9.15.x86_64
 [root@proxy-master ~]# vim /etc/named.conf
 ```
 
-![1](C:\Users\Hu\Desktop\2\1.png)
+![1](https://github.com/Xiao254182/notes/blob/master/img/2/1.png)
 
 ```shell
 [root@proxy-master ~]# named-checkconf 
@@ -98,7 +98,7 @@ bind-9.11.4-26.P2.el7_9.15.x86_64
 [root@proxy-master ~]# vim /etc/named.rfc1912.zones
 ```
 
-![1](C:\Users\Hu\Desktop\2\2.png)
+![1](https://github.com/Xiao254182/notes/blob/master/img/2/2.png)
 
 ```shell
 [root@proxy-master ~]# cd /var/named/
@@ -123,7 +123,7 @@ ops              A    192.168.100.41
 
 ```
 
-![](C:\Users\Hu\Desktop\2\3.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/3.png)
 
 ```shell
 [root@proxy-master named]# vim od.com.zone
@@ -141,7 +141,7 @@ $TTL 60 ; 1 minute
 dns                A    192.168.100.11
 ```
 
-![](C:\Users\Hu\Desktop\2\4.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/4.png)
 
 ```shell
 [root@proxy-master named]# named-checkconf
@@ -158,7 +158,7 @@ tcp6       0      0 ::1:953                 :::*                    LISTEN      
 #部分网卡名称也可能为ifcfg-eth<数字>
 ```
 
-![](C:\Users\Hu\Desktop\2\5.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/5.png)
 
 ```shell
 [root@proxy-master named]# systemctl restart network
@@ -180,7 +180,7 @@ rtt min/avg/max/mdev = 0.051/0.051/0.051/0.000 ms
 #这一步的目的为可以使用短域名
 ```
 
-![](C:\Users\Hu\Desktop\2\6.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/6.png)
 
 ```shell
 [root@proxy-master named]# ping -c1 proxy-master
@@ -214,7 +214,7 @@ fi
 
 ```
 
-![](C:\Users\Hu\Desktop\2\7.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/7.png)
 
 ```shell
 [root@ops ansible]# ansible all -i hosts --module-name=copy --args="src=/etc/ansible/dns.sh dest=/root"
@@ -223,11 +223,11 @@ fi
 
 3.修改windows网络(可忽略)
 
-![](C:\Users\Hu\Desktop\2\8.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/8.png)
 
 测试
 
-![](C:\Users\Hu\Desktop\2\9.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/9.png)
 
 三：K8S前置工作——准备签发证书环境
 
@@ -264,7 +264,7 @@ fi
 
 ```
 
-![](C:\Users\Hu\Desktop\2\10.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/10.png)
 
 ```shell
 [root@ops certs]# cfssl gencert -initca ca-csr.json | cfssl-json -bare ca
@@ -292,7 +292,7 @@ fi
 #修改hosts文件，只保留做k8s集群的master,worker和做harbor私有镜像仓库的ops
 ```
 
-![](C:\Users\Hu\Desktop\2\11.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/11.png)
 
 ```shell
 [root@ops ansible]# ansible all -i hosts -u root -m shell -a "curl -fsSL https://get.docker.com | bash -s docker --mirror Aliyun"
@@ -319,7 +319,7 @@ EOF
 systemctl start docker
 ```
 
-![](C:\Users\Hu\Desktop\2\12.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/12.png)
 
 ```shell
 [root@ops ansible]# ansible all -i hosts --module-name=copy --args="src=/etc/ansible/daemon.sh dest=/root"
@@ -345,11 +345,11 @@ harbor.v1.8.3.tar.gz  harbor.yml  install.sh  LICENSE  prepare
 [root@ops harbor]# vim harbor.yml
 ```
 
-![](C:\Users\Hu\Desktop\2\13.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/13.png)
 
-![](C:\Users\Hu\Desktop\2\14.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/14.png)
 
-![](C:\Users\Hu\Desktop\2\15.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/15.png)
 
 ```
 [root@ops harbor]# mkdir -p /data/harbor/logs
@@ -358,7 +358,7 @@ docker-compose-1.18.0-4.el7.noarch
 [root@ops harbor]# ./install.sh
 ```
 
-![](C:\Users\Hu\Desktop\2\16.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/16.png)
 
 ```shell
 [root@ops harbor]# docker-compose ps
@@ -398,7 +398,7 @@ server {
 }
 ```
 
-![](C:\Users\Hu\Desktop\2\17.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/17.png)
 
 ```shell
 [root@ops harbor]# nginx -t
@@ -412,7 +412,7 @@ Last login: Wed Jul 17 11:04:40 2024 from 192.168.100.1
 [root@proxy-master ~]# vim /var/named/od.com.zone
 ```
 
-![](C:\Users\Hu\Desktop\2\18.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/18.png)
 
 ```shell
 [root@proxy-master ~]# systemctl restart named
@@ -446,7 +446,7 @@ Connection to 192.168.100.11 closed.
 
 此时在浏览器打开harbor.od.com，会出现harbor的登陆界面
 
-![](C:\Users\Hu\Desktop\2\19.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/19.png)
 
 ```txt
 账号：admin
@@ -455,7 +455,7 @@ Connection to 192.168.100.11 closed.
 
 新建一个公开的项目
 
-![](C:\Users\Hu\Desktop\2\20.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/20.png)
 
 ```shell
 [root@ops harbor]# docker pull nginx
@@ -499,7 +499,7 @@ latest: digest: sha256:c94f3436f3bfcb467e9723bdb4957e2e86c00cc5f21e38a40d668c1a4
 
 打开浏览器查看，镜像已被成功推送到harbor仓库
 
-![](C:\Users\Hu\Desktop\2\21.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/21.png)
 
 六：安装部署主控节点服务etcd
 
@@ -544,7 +544,7 @@ latest: digest: sha256:c94f3436f3bfcb467e9723bdb4957e2e86c00cc5f21e38a40d668c1a4
 }
 ```
 
-![](C:\Users\Hu\Desktop\2\22.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/22.png)
 
 ```shell
 [root@ops certs]# vim etcd-peer-csr.json
@@ -572,7 +572,7 @@ latest: digest: sha256:c94f3436f3bfcb467e9723bdb4957e2e86c00cc5f21e38a40d668c1a4
 }
 ```
 
-![](C:\Users\Hu\Desktop\2\23.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/23.png)
 
 ```shell
 [root@ops certs]# ls
@@ -607,7 +607,7 @@ specifically, section 10.2.3 ("Information Requirements").
 [root@ops ansible]# vim hosts
 ```
 
-![](C:\Users\Hu\Desktop\2\24.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/24.png)
 
 ```shell
 [root@ops ansible]# mkdir etcd && cd etcd
@@ -643,7 +643,7 @@ chmod +x /opt/etcd/etcd-server-startup.sh && chown -R etcd.etcd /opt/etcd && cho
 supervisorctl update
 ```
 
-![](C:\Users\Hu\Desktop\2\25.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/25.png)
 
 ```shell
 [root@ops etcd]# vim make-etcd-server-startup.sh
@@ -675,7 +675,7 @@ cat > /opt/etcd/etcd-server-startup.sh << EOF
 EOF
 ```
 
-![](C:\Users\Hu\Desktop\2\26.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/26.png)
 
 ```shell
 [root@ops etcd]# vim make-etcd-server-init.sh
@@ -707,7 +707,7 @@ EOF
 
 ```
 
-![](C:\Users\Hu\Desktop\2\27.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/27.png)
 
 ```shell
 [root@ops etcd]# cd /etc/ansible
@@ -748,7 +748,7 @@ cluster is healthy
 [root@ops ansible]# vim hosts
 ```
 
-![](C:\Users\Hu\Desktop\2\28.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/28.png)
 
 签发client证书
 
@@ -775,7 +775,7 @@ cluster is healthy
 }
 ```
 
-![](C:\Users\Hu\Desktop\2\29.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/29.png)
 
 ```shell
 [root@ops certs]# cfssl gencert -ca=ca.pem -ca-key=ca-key.pem -config=ca-config.json -profile=client client-csr.json |cfssl-json -bare client
@@ -819,7 +819,7 @@ specifically, section 10.2.3 ("Information Requirements").
 }
 ```
 
-![](C:\Users\Hu\Desktop\2\30.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/30.png)
 
 ```shell
 [root@ops certs]# cfssl gencert -ca=ca.pem -ca-key=ca-key.pem -config=ca-config.json -profile=server apiserver-csr.json |cfssl-json -bare apiserver
@@ -881,7 +881,7 @@ mkdir -p /data/logs/kubernetes/kube-apiserver
 supervisorctl update
 ```
 
-![](C:\Users\Hu\Desktop\2\31.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/31.png)
 
 ```shell
 [root@ops api-server]# vim make-audit-yaml.sh
@@ -990,7 +990,7 @@ EOF
 chmod +x /opt/kubernetes/server/bin/kube-apiserver.sh
 ```
 
-![](C:\Users\Hu\Desktop\2\33.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/33.png)
 
 ```shell
 [root@ops api-server]# vim make-kube-apiserver-ini.sh
@@ -1021,7 +1021,7 @@ stdout_events_enabled=false
 EOF
 ```
 
-![](C:\Users\Hu\Desktop\2\34.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/34.png)
 
 ```shell
 [root@ops api-server]# cd ../
@@ -1043,7 +1043,7 @@ kube-apiserver-100-13            RUNNING   pid 65750, uptime 0:04:21
 [root@ops ansible]# vim hosts
 ```
 
-![](C:\Users\Hu\Desktop\2\35.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/35.png)
 
 ```shell
 [root@ops ansible]# mkdir L4 && cd L4/
@@ -1085,7 +1085,7 @@ scp root@192.168.100.41:/etc/ansible/L4/check_port.sh /etc/keepalived/
 chmod +x /etc/keepalived/check_port.sh
 ```
 
-![](C:\Users\Hu\Desktop\2\36.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/36.png)
 
 ```shell
 [root@ops L4]# cd ../
@@ -1129,7 +1129,7 @@ vrrp_instance VI_1 {
 }
 ```
 
-![](C:\Users\Hu\Desktop\2\37.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/37.png)
 
 ```shell
 [root@proxy-master ~]# exit
@@ -1167,7 +1167,7 @@ vrrp_instance VI_1 {
 }
 ```
 
-![](C:\Users\Hu\Desktop\2\38.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/38.png)
 
 ```shell
 [root@proxy-slave ~]# exit
@@ -1182,7 +1182,7 @@ Connection to 192.168.100.12 closed.
 [root@ops ansible]# vim hosts
 ```
 
-![](C:\Users\Hu\Desktop\2\40.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/40.png)
 
 ```shell
 [root@ops ansible]# mkdir kube-controller-manager && cd kube-controller-manager/
@@ -1206,7 +1206,7 @@ EOF
 chmod +x /opt/kubernetes/server/bin/kube-controller-manager.sh
 ```
 
-![](C:\Users\Hu\Desktop\2\39.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/39.png)
 
 ```shell
 [root@ops kube-controller-manager]# vim make-kube-conntroller-manager-ini.sh
@@ -1239,7 +1239,7 @@ EOF
 supervisorctl update
 ```
 
-![](C:\Users\Hu\Desktop\2\41.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/41.png)
 
 ```shell
 [root@ops kube-controller-manager]# vim make-kube-scheduler.sh
@@ -1258,7 +1258,7 @@ chmod +x /opt/kubernetes/server/bin/kube-scheduler.sh
 mkdir -p /data/logs/kubernetes/kube-scheduler
 ```
 
-![](C:\Users\Hu\Desktop\2\42.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/42.png)
 
 ```shell
 [root@ops kube-controller-manager]# vim make-kube-scheduler-ini.sh
@@ -1291,7 +1291,7 @@ EOF
 supervisorctl update
 ```
 
-![](C:\Users\Hu\Desktop\2\43.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/43.png)
 
 ```shell
 [root@ops kube-controller-manager]# vim kube-controller-manager-init.sh
@@ -1305,7 +1305,7 @@ scp root@192.168.100.41:/etc/ansible/kube-controller-manager/make-kube-scheduler
 bash /root/make-kube-controller-manager.sh && bash /root/make-kube-controller-manager-ini.sh && bash /root/make-kube-scheduler.sh && bash /root/make-kube-scheduler-ini.sh
 ```
 
-![](C:\Users\Hu\Desktop\2\44.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/44.png)
 
 ```shell
 [root@ops kube-controller-manager]# cd ../
@@ -1374,7 +1374,7 @@ etcd-2               Healthy   {"health": "true"}
 }
 ```
 
-![](C:\Users\Hu\Desktop\2\45.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/45.png)
 
 ```shell
 [root@ops certs]# cfssl gencert -ca=ca.pem -ca-key=ca-key.pem -config=ca-config.json -profile=server kubelet-csr.json | cfssl-json -bare kubelet
@@ -1450,7 +1450,7 @@ subjects:
   name: k8s-node
 ```
 
-![](C:\Users\Hu\Desktop\2\46.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/46.png)
 
 ```shell
 [root@master conf]# kubectl create -f k8s-node.yaml
@@ -1530,7 +1530,7 @@ EOF
 mkdir -p /data/logs/kubernetes/kube-kubelet /data/kubelet && chmod +x /opt/kubernetes/server/bin/kubelet.sh
 ```
 
-![](C:\Users\Hu\Desktop\2\47.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/47.png)
 
 ```shell
 [root@ops kubelet]# vim make-kube-kubelet-ini.sh
@@ -1561,7 +1561,7 @@ stdout_events_enabled=false
 EOF
 ```
 
-![](C:\Users\Hu\Desktop\2\48.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/48.png)
 
 ```shell
 [root@ops kubelet]# vim kubelet-init.sh
@@ -1573,7 +1573,7 @@ scp root@192.168.100.41:/etc/ansible/kubelet/make-kube-kubelet-ini.sh /root
 bash /root/make-kubelet.sh && bash /root/make-kube-kubelet-ini.sh
 ```
 
-![](C:\Users\Hu\Desktop\2\49.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/49.png)
 
 ```shell
 [root@ops kubelet]# cd ../
@@ -1640,7 +1640,7 @@ worker.host.com  Ready    master,node   3m5s     v1.15.2
 }
 ```
 
-![](C:\Users\Hu\Desktop\2\50.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/50.png)
 
 ```shell
 [root@ops certs]# cfssl gencert -ca=ca.pem -ca-key=ca-key.pem -config=ca-config.json -profile=client kube-proxy-csr.json |cfssl-json -bare kube-proxy-client
@@ -1724,7 +1724,7 @@ do
 done
 ```
 
-![](C:\Users\Hu\Desktop\2\51.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/51.png)
 
 ```shell
 [root@ops ansible]# ansible all -i hosts --module-name=copy --args="src=/etc/ansible/ipvs.sh dest=/root"
@@ -1749,7 +1749,7 @@ chmod +x /opt/kubernetes/server/bin/kube-proxy.sh
 mkdir -p /data/logs/kubernetes/kube-proxy
 ```
 
-![](C:\Users\Hu\Desktop\2\52.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/52.png)
 
 ```shell
 [root@ops kube-proxy]# vim make-kube-proxy-ini.sh
@@ -1780,7 +1780,7 @@ stdout_events_enabled=false
 EOF
 ```
 
-![](C:\Users\Hu\Desktop\2\53.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/53.png)
 
 ```shell
 [root@ops kube-proxy]# vim kube-proxy-init.sh
@@ -1792,7 +1792,7 @@ scp root@192.168.100.41:/etc/ansible/kube-proxy/make-kube-proxy.sh /root
 bash /root/make-kube-proxy.sh && bash /root/mmake-kube-proxy-ini.sh
 ```
 
-![](C:\Users\Hu\Desktop\2\54.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/54.png)
 
 ```shell
 [root@ops kube-proxy]# cd ../
@@ -1837,7 +1837,7 @@ spec:
         - containerPort: 80
 ```
 
-![](C:\Users\Hu\Desktop\2\55.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/2/55.png)
 
 ```shell
 [root@master ~]# kubectl create -f nginx-ds.yaml
