--- a/2.企业部署K8S.md
+++ b/2.企业部署K8S.md
@@ -1602,10 +1602,10 @@ worker.host.com  Ready    <none>   27s    v1.15.2
 NAME             STATUS   ROLES    AGE    VERSION
 master.host.com  Ready    <none>   27s    v1.15.2
 worker.host.com  Ready    <none>   27s    v1.15.2
-ansible all -i hosts -u root -m shell -a "kubectl label node hdss7-21.host.com node-role.kubernetes.io/master="
-ansible all -i hosts -u root -m shell -a "kubectl label node hdss7-21.host.com node-role.kubernetes.io/node="
-ansible all -i hosts -u root -m shell -a "kubectl label node hdss7-22.host.com node-role.kubernetes.io/master="
-ansible all -i hosts -u root -m shell -a "kubectl label node hdss7-22.host.com node-role.kubernetes.io/node="
+[root@ops ansible]# ansible all -i hosts -u root -m shell -a "kubectl label node hdss7-21.host.com node-role.kubernetes.io/master="
+[root@ops ansible]# ansible all -i hosts -u root -m shell -a "kubectl label node hdss7-21.host.com node-role.kubernetes.io/node="
+[root@ops ansible]# ansible all -i hosts -u root -m shell -a "kubectl label node hdss7-22.host.com node-role.kubernetes.io/master="
+[root@ops ansible]# ansible all -i hosts -u root -m shell -a "kubectl label node hdss7-22.host.com node-role.kubernetes.io/node="
 [root@ops ansible]# ansible all -i hosts -u root -m shell -a "kubectl get nodes"
 192.168.100.13 | CHANGED | rc=0 >>
 NAME             STATUS   ROLES         AGE    VERSION
@@ -1832,7 +1832,7 @@ spec:
     spec:
       containers:
       - name: my-nginx
-        image: harbor.od.com/public/nginx:v1.7.9
+        image: harbor.od.com/public/nginx:latest
         ports:
         - containerPort: 80
 ```
