--- a/4.基于kubernetes构建jenkins+gitlab持续集成.md
+++ b/4.基于kubernetes构建jenkins+gitlab持续集成.md
@@ -75,7 +75,7 @@ services:
     container_name: jenkins
 ```
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\1.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/1.png)
 
 ```shell
 root@master:/opt/CICD/jenkins# docker-compose -f docker-compose.yaml up -d
@@ -96,7 +96,7 @@ jenkins
 
 在浏览器通过<ip地址>:8090访问Jenkins，如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\2.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/2.png)
 
 查看密码：
 
@@ -107,27 +107,27 @@ root@master:/opt/CICD/jenkins# docker exec jenkins cat /var/jenkins_home/secrets
 
 输入密码并点击“继续”，如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\3.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/3.png)
 
 依次点击“系统管理”、“管理用户”按钮进入用户列表界面，如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\4.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/4.png)
 
 点击“新建用户”，输入用户信息，如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\5.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/5.png)
 
 点击“创建用户”如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\6.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/6.png)
 
 退出admin用户登录，使用新创建的用户登录Jenkins
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\7.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/7.png)
 
 依次点击"系统管理"， “系统配置”按钮进入系统配置界面，在“Resource root URL”处配置Jenkins URL，如图所示:
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\8.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/8.png)
 
 完成后点击“保存”
 
@@ -161,7 +161,7 @@ services:
       - /srv/gitlab/gitlab/data:/var/opt/gitlab
 ```
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\9.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/9.png)
 
 ```shell
 root@master:/opt/CICD/gitlab# docker-compose up -d
@@ -177,15 +177,15 @@ gitlab   /assets/wrapper   Up (health: starting)   0.0.0.0:1022->22/tcp,:::1022-
 
 Gitlab启动较慢，可以通过docker logs查看启动状态。启动完成后，在浏览器访问Gitlab（<ip地址>:81），如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\10.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/10.png)
 
 （PS：有时会出现503界面，如图：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\20.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/20.png)
 
 这是因为Gitlab对内存资源的消耗极大，甚至会吃满内存（gitlab的官网有说明安装gitlab最小的机器配置就是2核4G）,因此我们需要手动调节一下Gitlab的配置
 
-（这是我做实验的机子，跟被挖矿了一样）![](https://github.com/Xiao254182/notes/blob/master/img/4\11.png)
+（这是我做实验的机子，跟被挖矿了一样）![](https://github.com/Xiao254182/notes/blob/master/img/4/11.png)
 
 首先我们进入Gitlab容器
 
@@ -199,38 +199,38 @@ sidekiq['max-concurrency'] //减少sidekiq并发数,改为1
 sidekiq['min-concurrency'] //减少sidekiq并发,改为1
 ```
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\12.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/12.png)
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\13.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/13.png)
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\14.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/14.png)
 
 ```shell
 root@192:/# gitlab-ctl reconfigure
 root@192:/# gitlab-ctl restart
 ```
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\15.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/15.png)
 
 此时我们发现Gitlab的负载就没这么高了）
 
 设置root用户信息并使用root用户登录Gitlab，如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\16.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/16.png)
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\17.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/17.png)
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\18.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/18.png)
 
 2.创建项目
 
 点击“Create a project”，创建项目springcloud，可见等级选择“Public”，如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\19.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/19.png)
 
 点击“Create project”，进入项目，如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\21.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/21.png)
 
 push源代码到gitlab的springcloud项目：
 
@@ -260,7 +260,7 @@ Branch 'master' set up to track remote branch 'master' from 'origin'.
 
 刷新网页，springcloud项目中文件已经更新了，如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\22.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/22.png)
 
 三：部署Harbor仓库
 
@@ -274,17 +274,17 @@ root@master:/opt# cd harbor/
 root@master:/opt/harbor# vim harbor.yml
 ```
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\40.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/40.png)
 
 ```shell
 root@master:/opt/harbor# ./install.sh
 ```
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\42.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/42.png)
 
 启动完成后，在浏览器访问Harbor（<ip地址>:180），如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\41.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/41.png)
 
 ```
 如果没有在配置文件中修改的话默认账号密码：
@@ -292,7 +292,7 @@ root@master:/opt/harbor# ./install.sh
 密码：Harbor12345
 ```
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\43.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/43.png)
 
 四：配置Jenkins连接Gitlab
 
@@ -300,11 +300,11 @@ root@master:/opt/harbor# ./install.sh
 
 返回Gitlab首页，点击管理区域的扳手图标，如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\23.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/23.png)
 
 点击左侧导航栏的“Settings”→“Network”，设置“Outbound requests”，勾选“Allow requests to the local network from web hooks and services”，如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\24.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/24.png)
 
 配置完成后保存
 
@@ -312,15 +312,15 @@ root@master:/opt/harbor# ./install.sh
 
 点击Gitlab用户头像图标，点击“Settings”，如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\25.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/25.png)
 
 点击左侧导航栏的“Access Tokens”添加token，如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\26.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/26.png)
 
 点击“Create personal access token”生成Token，如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\27.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/27.png)
 
 注意这个token一定要保存一份，因为后面这个token你就再也无法查看了
 
@@ -330,11 +330,11 @@ g5ibapyTqbuabY3MVr1v
 
 登录Jenkins首页，点击“系统管理”→“系统配置”，配置Gitlab信息，取消勾选“Enable authentication for '/project' end-point”，点击“添加”→“Jenkins”添加认证信息，将Gitlab API Token填入，如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\28.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/28.png)
 
 点击“Test Connection”，如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\29.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/29.png)
 
 点击保存
 
@@ -356,7 +356,7 @@ export M2_HOME=/usr/local/maven
 export PATH=$PATH:$M2_HOME/bin
 ```
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\30.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/30.png)
 
 ```shell
 [root@bcdd2e111dde /]# vi /root/.bashrc
@@ -375,7 +375,7 @@ source /etc/profile
 fi
 ```
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\31.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/31.png)
 
 ```shell
 [root@bcdd2e111dde /]# exit
@@ -395,7 +395,7 @@ exit
 
 登录Jenkins首页，点击“系统管理”→“全局工具配置”，点击“新增Maven”，如图所示。取消勾选“自动安装”，填入maven名称和安装路径，配置完成后点击“应用”。
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\32.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/32.png)
 
 六：配置CI/CD
 
@@ -403,28 +403,28 @@ exit
 
 登录Jenkins首页，点击左侧导航栏“新建任务”，如图所示，选择构建一个流水线
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\33.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/33.png)
 
 点击“确定”，配置构建触发器，记录下GitLab webhook URL的地址，如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\34.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/34.png)
 
 配置流水线，点击“流水线语法”，如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\35.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/35.png)
 
 示例步骤选择“git：Git”，将springcloud项目地址填入仓库URL，如图所示：
-![](https://github.com/Xiao254182/notes/blob/master/img/4\36.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/36.png)
 
 点击“添加”→“jenkins”添加凭据，如图所示。类型选择“Username with password”，用户名和密码为Gitlab仓库的用户名和密码。
-![](https://github.com/Xiao254182/notes/blob/master/img/4\37.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/37.png)
 
 添加凭据后选择凭据，如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\38.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/38.png)
 
 点击“生成流水线脚本”，如图所示：
-![](https://github.com/Xiao254182/notes/blob/master/img/4\39.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/39.png)
 
 记录生成的值，并将其写入流水线脚本中，完整的流水线脚本如下：
 
@@ -481,23 +481,23 @@ node{
 
 在网页写入完整的流水线脚本，如图所示，完成后点击“应用”
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\45.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/45.png)
 
 2.开启Jenkins匿名访问
 
 登录Jenkins首页，点击“系统管理”→“全局安全配置”，配置授权策略允许匿名用户访问，如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\46.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/46.png)
 
 3.配置Webhook
 
 登录Gitlab，进入springcloud项目，点击左侧导航栏“Settings”→“Webhooks”，将前面记录的GitLab webhook URL地址填入URL处，禁用SSL认证，如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\47.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/47.png)
 
 点击“Add webhook”添加webhook，点击“Test”→“Push events”进行测试，如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\48.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/48.png)
 
 结果返回HTTP 200则表明Webhook配置成功。
 
@@ -505,9 +505,9 @@ node{
 
 登录Harbor，新建项目springcloud，访问级别设置为公开，创建完成后如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\49.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/49.png)
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\50.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/50.png)
 
 七：触发CI/CD
 
@@ -539,12 +539,12 @@ Everything up-to-date
 
 登录Jenkins，可以看到springcloud项目已经开始构建，如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\52.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/52.png)
 
 点击项目名称查看流水线阶段视图，如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\51.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/51.png)
 
 点击右侧“#1”可查看控制台输出，此处会显示构建的详细进程，如图所示：
 
-![](https://github.com/Xiao254182/notes/blob/master/img/4\53.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/4/53.png)
