--- a/4.基于kubernetes构建jenkins+gitlab持续集成.md
+++ b/4.基于kubernetes构建jenkins+gitlab持续集成.md
@@ -30,7 +30,7 @@ NAME             STATUS                     ROLES    AGE    VERSION
 192.168.100.34   Ready                      node     144d   v1.27.5
 ```
 
-将CICD_Offline.tar离线软件包上传至master节点/root目录下
+将CICD_Offline.tar离线软件包上传至master节点/root目录下(软件包下载地址:链接：https://pan.baidu.com/s/19TQKohSsPT8CKnGwY6feIQ?pwd=j34r 提取码：j34r)
 
 ```shell
 root@master:~# ls
