Update 5.基于Kubernetes + Istio实现灰度发布 .md

--- a/5.基于Kubernetes + Istio实现灰度发布 .md
+++ b/5.基于Kubernetes + Istio实现灰度发布 .md
@@ -280,7 +280,9 @@ spec:
 ---
 ```
 
-(PS:该YAML文件修改自https://raw.githubusercontent.com/istio/istio/release-1.22/samples/bookinfo/platform/kube/bookinfo.yaml，可根据需求自行修改)
+(PS:该YAML文件修改自
+https://raw.githubusercontent.com/istio/istio/release-1.22/samples/bookinfo/platform/kube/bookinfo.yaml
+可根据需求自行修改)
 
 查看Pod状态：
 
