--- a/5.基于Kubernetes + Istio实现灰度发布 .md
+++ b/5.基于Kubernetes + Istio实现灰度发布 .md
@@ -282,7 +282,7 @@ spec:
 
 (PS:该YAML文件修改自
 https://raw.githubusercontent.com/istio/istio/release-1.22/samples/bookinfo/platform/kube/bookinfo.yaml
-可根据需求自行修改)
+，可根据需求自行修改)
 
 查看Pod状态：
 
@@ -365,7 +365,9 @@ spec:
           number: 9080
 ```
 
-(PS:该YAML文件修改自https://raw.githubusercontent.com/istio/istio/release-1.22/samples/bookinfo/networking/bookinfo-gateway.yaml,可根据需求自行修改)
+(PS:该YAML文件修改自
+https://raw.githubusercontent.com/istio/istio/release-1.22/samples/bookinfo/networking/bookinfo-gateway.yaml
+,可根据需求自行修改)
 
 这个网关指定所有HTTP流量通过80端口流入网格，然后把网关绑定到虚拟服务上。
 
