--- a/8.OpenCloudOS系统部署OpenStack Zed版本.md
+++ b/8.OpenCloudOS系统部署OpenStack Zed版本.md
@@ -3,14 +3,17 @@
 1 简介
 
 ```
-OpenStack 是一个开源的云计算平台，提供基础设施即服务（IaaS）的解决方案。它由一系列组件组成，包括计算、存储、网络、身份认证、编排、计量、告警和数据库等。OpenStack可以帮助用户构建和管理私有云、公有云和混合云等多种云计算环境。 本文简要介绍 Zed 版本 OpenStack 在本系统上的部署过程。
+OpenStack 是一个开源的云计算平台，提供基础设施即服务（IaaS）的解决方案。它由一系列组件组成，包括计算、存储、网络、身份认证、编排、
+计量、告警和数据库等。OpenStack可以帮助用户构建和管理私有云、公有云和混合云等多种云计算环境。 本文简要介绍 Zed 版本 OpenStack 在
+本系统上的部署过程。
 ```
 
 2 环境准备
 
 2.1 拓扑介绍
 
-基于 OpenStack 经典的三节点环境进行部署，分别是控制节点 (Controller)、计算节点 (Compute)、存储节点 (Storage)，其中存储节点一般只部署存储服务，在资源有限的情况下，可以不单独部署该节点，把存储节点上的服务部署到计算节点即可
+基于 OpenStack 经典的三节点环境进行部署，分别是控制节点 (Controller)、计算节点 (Compute)、存储节点 (Storage)，其中存储节点一般只部
+署存储服务，在资源有限的情况下，可以不单独部署该节点，把存储节点上的服务部署到计算节点即可
 
 | ip              | 主机名     | 组件                                  |
 | --------------- | ---------- | ------------------------------------- |
@@ -54,7 +57,7 @@ hostnamectl set-hostname storage
 [root@controller ~]# vim /etc/hosts
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\1.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/1.png)
 
 ```shell
 [root@controller ~]# scp /etc/hosts 192.168.100.132:/etc/hosts
@@ -91,7 +94,7 @@ hosts                                                 100%  459   604.3KB/s   00
 [root@controller ~]# vim /etc/chrony.conf
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\2.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/2.png)
 
 3.重启服务
 
@@ -115,7 +118,7 @@ hosts                                                 100%  459   604.3KB/s   00
 [root@storage ~]# vim /etc/chrony.conf
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\3.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/3.png)
 
 3.重启服务
 
@@ -140,7 +143,9 @@ MS Name/IP address         Stratum Poll Reach LastRx Last sample
 2.5 安装数据库
 
 ```
-OpenStack 中的许多服务都需要使用数据库来存储和管理数据，例如，Nova服务需要使用数据库来存储虚拟机的状态和元数据，Neutron 服务需要使用数据库来存储网络拓扑和配置信息，Cinder 服务需要使用数据库来存储卷和快照等。在 OpenStack 中，MariaDB 通常被用作这些服务的后端数据库，以提供高效、可靠和可扩展的数据存储和管理
+OpenStack 中的许多服务都需要使用数据库来存储和管理数据，例如，Nova服务需要使用数据库来存储虚拟机的状态和元数据，Neutron 服务需要使用
+数据库来存储网络拓扑和配置信息，Cinder 服务需要使用数据库来存储卷和快照等。在 OpenStack 中，MariaDB 通常被用作这些服务的后端数据库，
+以提供高效、可靠和可扩展的数据存储和管理
 ```
 
 在controller节点部署MariaDB数据库
@@ -157,7 +162,7 @@ collation-server = utf8_general_ci
 character-set-server = utf8
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\4.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/4.png)
 
 ```shell
 [root@controller ~]# systemctl start mariadb.service && systemctl enable mariadb.service
@@ -270,7 +275,8 @@ Setting permissions for user "openstack" in vhost "/" ...
 2.7 安装内存对象缓存服务
 
 ```
-在 OpenStack 中，通常使用 Memcached 作为 Keystone 服务的缓存层，以提高身份验证和授权的性能和可扩展性。Keystone 服务需要频繁地访问数据库来验证用户身份和授权访问权限，使用 Memcached 缓存可以减少对数据库的访问次数，从而提高 Keystone 服务的性能和可靠性。
+在 OpenStack 中，通常使用 Memcached 作为 Keystone 服务的缓存层，以提高身份验证和授权的性能和可扩展性。Keystone 服务需要频繁地访问
+数据库来验证用户身份和授权访问权限，使用 Memcached 缓存可以减少对数据库的访问次数，从而提高 Keystone 服务的性能和可靠性。
 ```
 
 在controller节点安装Memcached服务
@@ -280,7 +286,7 @@ Setting permissions for user "openstack" in vhost "/" ...
 [root@controller ~]# vim /etc/sysconfig/memcached
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\5.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/5.png)
 
 ```shell
 [root@controller ~]# systemctl start memcached.service && systemctl enable memcached.service
@@ -436,9 +442,9 @@ connection = mysql+pymysql://keystone:000000@controller/keystone
 provider = fernet
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\6.png)  
+![](https://github.com/Xiao254182/notes/blob/master/img/8/6.png)  
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\7.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/7.png)
 
 4.同步数据库
 
@@ -511,7 +517,7 @@ provider = fernet
 [root@controller ~]# vim /etc/httpd/conf/httpd.conf
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\8.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/8.png)
 
 8.创建软连接
 
@@ -825,13 +831,13 @@ default_store = file
 filesystem_store_datadir = /var/lib/glance/images/
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\9.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/9.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\10.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/10.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\11.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/11.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\12.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/12.png)
 
 8.同步数据库
 
@@ -1085,11 +1091,11 @@ username = placement
 password = 000000
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\13.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/13.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\14.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/14.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\15.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/15.png)
 
 8.同步数据库
 
@@ -1345,23 +1351,23 @@ username = placement
 password = 000000
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\16.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/16.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\17.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/17.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\18.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/18.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\19.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/19.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\20.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/20.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\21.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/21.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\22.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/22.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\23.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/23.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\24.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/24.png)
 
 8.数据库同步
 
@@ -1475,21 +1481,21 @@ password = 000000
 virt_type = qemu
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\25.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/25.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\26.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/26.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\27.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/27.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\28.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/28.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\29.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/29.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\30.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/30.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\31.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/31.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\32.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/32.png)
 
 3.启动服务
 
@@ -1638,7 +1644,8 @@ Found 1 unmapped computes in cell: 0dde93ee-df2e-4da8-acee-3d4cbe729e6b
 3.5 Neutron 安装
 
 ```
-Neutron 是 OpenStack 的一个组件，提供了一个中央网络管理系统，用于管理网络资源。可以管理 OpenStack 中的虚拟网络、子网、路由器和防火墙等资源。
+Neutron 是 OpenStack 的一个组件，提供了一个中央网络管理系统，用于管理网络资源。可以管理 OpenStack 中的虚拟网络、子网、路由器和防火
+墙等资源。
 ```
 
 在 controller 节点和 compute 节点部署Neutron
@@ -1808,13 +1815,13 @@ lock_path = /var/lib/neutron/tmp
 linuxbridge = true
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\33.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/33.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\34.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/34.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\35.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/35.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\36.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/36.png)
 
 8.配置 ML2
 
@@ -1836,7 +1843,7 @@ vni_ranges = 1:1000
 enable_ipset = true
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\37.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/37.png)
 
 9.配置 `/etc/neutron/plugins/ml2/linuxbridge_agent.ini` 文件
 
@@ -1855,7 +1862,7 @@ enable_security_group = true
 firewall_driver = neutron.agent.linux.iptables_firewall.IptablesFirewallDriver
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\38.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/38.png)
 
 10.配置 Layer-3 代理
 
@@ -1865,7 +1872,7 @@ firewall_driver = neutron.agent.linux.iptables_firewall.IptablesFirewallDriver
 interface_driver = linuxbridge
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\39.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/39.png)
 
 11.配置 DHCP 代理
 
@@ -1877,7 +1884,7 @@ dhcp_driver = neutron.agent.linux.dhcp.Dnsmasq
 enable_isolated_metadata = true
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\40.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/40.png)
 
 12.配置 metadata 代理
 
@@ -1888,7 +1895,7 @@ nova_metadata_host = controller
 metadata_proxy_shared_secret = 7d8f008607a14b63aaf2 #此处为生成的随机数，可使用"openssl rand -hex 10"命令生成
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\41.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/41.png)
 
 13.配置 Nova 服务
 
@@ -1907,7 +1914,7 @@ service_metadata_proxy = true
 metadata_proxy_shared_secret = 41010849029170bef8df   #此处为生成的随机数，可使用"openssl rand -hex 10"命令生成
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\42.png) 
+![](https://github.com/Xiao254182/notes/blob/master/img/8/42.png) 
 
 14.创建 `/etc/neutron/plugin.ini` 的符号链接
 
@@ -2101,11 +2108,11 @@ password = 000000
 lock_path = /var/lib/neutron/tmp
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\43.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/43.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\44.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/44.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\45.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/45.png)
 
 3.编辑 `/etc/neutron/plugins/ml2/linuxbridge_agent.ini` 文件
 
@@ -2124,7 +2131,7 @@ enable_security_group = true
 firewall_driver = neutron.agent.linux.iptables_firewall.IptablesFirewallDriver
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\46.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/46.png)
 
 4.配置 Nova 服务
 
@@ -2141,7 +2148,7 @@ username = neutron
 password = 000000
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\47.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/47.png)
 
 5.重启 nova-compute 服务
 
@@ -2328,13 +2335,13 @@ password = 000000
 lock_path = /var/lib/cinder/tmp
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\48.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/48.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\49.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/49.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\50.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/50.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\51.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/51.png)
 
 8.数据库同步
 
@@ -2356,7 +2363,7 @@ lock_path = /var/lib/cinder/tmp
 os_region_name = RegionOne
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\52.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/52.png)
 
 10.重启 nova-api 服务，并启动 Cinder 相关服务
 
@@ -2431,13 +2438,13 @@ target_helper = lioadm
 lock_path = /var/lib/cinder/tmp
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\53.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/53.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\54.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/54.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\55.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/55.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\56.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/56.png)
 
 4.启动服务
 
@@ -2501,11 +2508,11 @@ OPENSTACK_API_VERSIONS = {
 }
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\57.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/57.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\59.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/59.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\60.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/60.png)
 
 3.重启服务
 
@@ -2517,7 +2524,7 @@ OPENSTACK_API_VERSIONS = {
 
 打开浏览器，输入 `http://192.168.100.131/dashboard`，打开 Horizon 登录页面。
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\58.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/58.png)
 
 用户名：admin 密码：000000 域：default
 
@@ -2717,19 +2724,19 @@ tcp_ports = 3306
 tcp_ports = 5432
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\61.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/61.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\62.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/62.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\63.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/63.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\64.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/64.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\65.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/65.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\66.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/66.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\67.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/67.png)
 
 8.编辑 `/etc/trove/trove-guestagent.conf`
 
@@ -2760,7 +2767,7 @@ docker_image = your-registry/your-repo/mysql
 backup_docker_image = your-registry/your-repo/db-backup-mysql:1.1.0
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\68.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/68.png)
 
 9.数据库同步
 
@@ -2888,9 +2895,9 @@ bind_port = 5000
 password = SWIFT_PASS
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\69.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/69.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\70.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/70.png)
 
 3.10.2 storage 节点
 
@@ -2967,7 +2974,7 @@ UUID="571dc15f-daf9-4717-a847-cc23984346e3" /srv/node/sdc         xfs     noatim
 UUID="ad8c6724-d40e-4491-bdfc-a58cbbcb2792" /srv/node/sdd         xfs     noatime         0 2
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\71.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/71.png)
 
 5.挂载设备
 
@@ -3011,7 +3018,7 @@ read only = False
 lock file = /var/lock/object.lock
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\72.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/72.png)
 
 7.启动rsyncd 服务
 
@@ -3047,7 +3054,8 @@ Created symlink /etc/systemd/system/multi-user.target.wants/rsyncd.service → /
 3.10.3 创建与分发环
 
 ```
-Swift 使用环来实现高可用性和可扩展性。Swift 中的环是指一组存储对象的容器，可以存储和检索大量的非结构化数据。环由多个存储节点组成，每个节点都可以存储和检索对象。可以自动将数据复制到多个节点上，以提高数据的可靠性和可用性。
+Swift 使用环来实现高可用性和可扩展性。Swift 中的环是指一组存储对象的容器，可以存储和检索大量的非结构化数据。环由多个存储节点组成，
+每个节点都可以存储和检索对象。可以自动将数据复制到多个节点上，以提高数据的可靠性和可用性。
 ```
 
 创建与分发环的操作都在 controller 节点
@@ -3216,7 +3224,7 @@ name = Policy-0
 default = yes
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\74.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/74.png)
 
 3.将 `swift.conf` 文件复制到 `/etc/swift` **每个**storage 节点和运行代理服务的任何其他节点上的目录，本文不涉及代理服务器，复制到 storage 节点即可
 
@@ -3452,13 +3460,13 @@ auth_url = http://controller:5000
 auth_type = password
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\75.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/75.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\76.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/76.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\77.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/77.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\78.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/78.png)
 
 8.同步数据库
 
@@ -3650,13 +3658,13 @@ interface = internalURL
 region_name = RegionOne
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\79.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/79.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\80.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/80.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\81.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/81.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\82.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/82.png)
 
 8.同步数据库
 
@@ -3842,11 +3850,11 @@ file_basepath = /var/lib/gnocchi
 driver = file
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\83.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/83.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\84.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/84.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\85.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/85.png)
 
 8.同步数据库
 
@@ -3936,7 +3944,7 @@ publishers:
       - gnocchi://?filter_project=service&archive_policy=low
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\86.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/86.png)
 
 6.编辑配置文件 `/etc/ceilometer/ceilometer.conf`
 
@@ -3957,9 +3965,9 @@ interface = internalURL
 region_name = RegionOne
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\87.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/87.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\88.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/88.png)
 
 7.数据库同步
 
@@ -4002,9 +4010,9 @@ interface = internalURL
 region_name = RegionOne
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\89.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/89.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\90.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/90.png)
 
 3.编辑配置文件 `/etc/nova/nova.conf`
 
@@ -4021,11 +4029,11 @@ notify_on_state_change = vm_and_task_state
 driver = messagingv2
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\91.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/91.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\92.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/92.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\93.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/93.png)
 
 4.启动服务
 
@@ -4295,15 +4303,15 @@ user_domain_name = default
 auth_uri = http://controller:5000
 ```
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\94.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/94.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\95.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/95.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\96.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/96.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\97.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/97.png)
 
-![](C:\Users\Hu\Desktop\Notes\8.OpenCloudOS系统部署OpenStack Zed版本\8\98.png)
+![](https://github.com/Xiao254182/notes/blob/master/img/8/98.png)
 
 9.同步数据库
 
